--- a/app/views/postts/index.html.erb
+++ b/app/views/postts/index.html.erb
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Postt', new_postt_path %>
+<%= link_to 'New Postt', new_postt_path %> |
+<%= link_to 'Back', more_info_path %>
