Added controller welcome

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_comment_path %> |
+<%= link_to 'back', root_path %>
+
